Theme change, show document type checkboxes inline

--- a/sites/all/themes/at_tf_admin/css/at_admin.css
+++ b/sites/all/themes/at_tf_admin/css/at_admin.css
@@ -3423,3 +3423,8 @@ table.grievance-timeline tr.pending {
 .field-name-field-grievance-daysoff .field-item {
   display: inline;
 }
+
+.form-item-field-grievance-document-types-und .form-type-checkbox {
+  display: inline;
+  width: 200px;
+}
