--- a/sites/all/themes/at_tf_admin/css/at_admin.css
+++ b/sites/all/themes/at_tf_admin/css/at_admin.css
@@ -3428,3 +3428,61 @@ table.grievance-timeline tr.pending {
   display: inline-block;
   width: 300px;
 }
+
+
+
+
+
+
+
+
+.grievance_form_body_grievance_form_226 .field-name-grievance-company-rep-ad-combine p {
+  padding: 0;
+  margin: 0;
+}
+
+.grievance_form_body_grievance_form_226 .field-name-field-grievance-shop,
+.grievance_form_body_grievance_form_226 .field-name-grievant-name {
+  font-size: 16px;
+  font-weight: bold;
+}
+
+.grievance_form_body_grievance_form_226 .field-name-field-grievance-broughtby-wrapper {
+  font-size: 16px;
+  font-style: italic;
+  padding-bottom: 10px;
+}
+
+.grievance_form_body_grievance_form_226 .field-name-field-grievance-broughtby-wrapper div {
+  display: inline;
+}
+
+.grievance_form_body_grievance_form_226 .group-leftright {
+  margin-bottom: 10px;
+  padding-bottom: 10px;
+  border-bottom: 2px solid #000000;
+}
+
+.grievance_form_body_grievance_form_226 .field-group-div h3 {
+  font-weight: bold;
+  padding: 0;
+  margin: 0;
+  font-size: 13px;
+}
+
+.grievance_form_body_grievance_form_226 .field-name-field-grievance-document-types li {
+  list-style: disc;
+}
+
+.grievance_form_body_grievance_form_226 .field-name-field-grievance-document-types ul {
+  padding-top: 0;
+  padding-bottom: 0;
+}
+
+.grievance_form_body_grievance_form_226 .field-name-field-grievance-clauseref, 
+.grievance_form_body_grievance_form_226 .field-name-field-grievance-date-1, 
+.grievance_form_body_grievance_form_226 .field-name-field-grievance-date-2, 
+.grievance_form_body_grievance_form_226 .field-name-field-grievance-remedy, 
+.grievance_form_body_grievance_form_226 .group-grievance-226-3 {
+  padding-bottom: 10px;
+}
