wkhtmltopdf should respect print styles; print styles should be in pt's.

--- a/sites/all/themes/at_tf_admin/css/at_admin.css
+++ b/sites/all/themes/at_tf_admin/css/at_admin.css
@@ -3489,3 +3489,11 @@ table.grievance-timeline tr.pending {
 .grievance_form_body_grievance_form_226 .group-grievance-226-3 {
   padding-bottom: 10px;
 }
+
+
+
+@media print {
+  body {
+    font-size: 9pt;
+  }
+}
