Minor theme change

--- a/sites/all/themes/at_tf_admin/css/at_admin.css
+++ b/sites/all/themes/at_tf_admin/css/at_admin.css
@@ -3491,6 +3491,13 @@ table.grievance-timeline tr.pending {
   font-size: 13px;
 }
 
+.grievance_form_body_grievance_form_226 .field-name-field-grievance-class-tid ul,
+.grievance_form_body_grievance_form_226 .field-name-field-grievance-class-tid li {
+  margin: 0;
+  padding: 0;
+}
+
+
 .grievance_form_body_grievance_form_226 .field-name-field-grievance-clauseref, 
 .grievance_form_body_grievance_form_226 .field-name-field-grievance-date-1, 
 .grievance_form_body_grievance_form_226 .field-name-field-grievance-date-2, 
