Minor style changes

--- a/sites/all/themes/at_tf_admin/css/at_admin.css
+++ b/sites/all/themes/at_tf_admin/css/at_admin.css
@@ -3511,3 +3511,8 @@ table.grievance-timeline tr.pending {
 
 
 
+#grievance-letter-body table,
+#grievance-letter-body tbody {
+  border: none;
+}
+
