--- a/sites/all/themes/at_tf_admin/css/at_admin.css
+++ b/sites/all/themes/at_tf_admin/css/at_admin.css
@@ -3559,3 +3559,9 @@ table.grievance-timeline tr.pending {
   white-space: -o-pre-wrap;    /* Opera 7 */
   word-wrap: break-word;       /* Internet Explorer 5.5+ */
 }
+
+
+.view-id-grievances_mine table caption {
+  font-size: 16px;
+  padding-bottom: 5px;
+}
