Change to print stylesheet

--- a/sites/all/themes/at_tf_admin/css/at_admin.css
+++ b/sites/all/themes/at_tf_admin/css/at_admin.css
@@ -3442,9 +3442,12 @@ table.grievance-timeline tr.pending {
   .block-masquerade,
   #admin-menu-wrapper,
   .block-superfish,
-  .block-grievance-timeleft {
+  .block-grievance-timeleft,
+  div.views-exposed-form {
     display: none;
   }
+
+
 }
 
 
