Styling for letter form

--- a/sites/all/themes/at_tf_admin/css/at_admin.css
+++ b/sites/all/themes/at_tf_admin/css/at_admin.css
@@ -3258,6 +3258,11 @@ fieldset legend {
   overflow: hidden;
 }
 
+
+#grievance-letter-form .grievance-recipient {
+  height: 250px;
+}
+
 .grievance-recipient:hover {
   background-color: #FFC384;
   border-color: #ff8500;
