--- a/sites/all/themes/at_tf_admin/css/at_admin.css
+++ b/sites/all/themes/at_tf_admin/css/at_admin.css
@@ -3561,7 +3561,9 @@ table.grievance-timeline tr.pending {
   padding-right: 10px;
 }
 
-.node-full .field-name-field-grievance-comments {
+.node-full .field-name-field-grievance-comments,
+.view-grievance-log pre,
+.view-grievance-log-all pre {
   white-space: pre-wrap;       /* Since CSS 2.1 */
   white-space: -moz-pre-wrap;  /* Mozilla, since 1999 */
   white-space: -pre-wrap;      /* Opera 4-6 */
