--- a/sites/all/themes/at_tf_admin/css/at_admin.css
+++ b/sites/all/themes/at_tf_admin/css/at_admin.css
@@ -3844,32 +3844,25 @@ fieldset.date-combo .container-inline-date .date-padding {
   float: left;
 }
 
+/* 
+.page-admin-reports-report-cache-grievance-report-average-time .grievance-report-average-time td,  
+.page-admin-reports-report-cache-grievance-report-average-time .grievance-report-average-time th { 
+  width: 10%;
+}
+
 .page-admin-reports-report-cache-grievance-report-average-time .grievance-report-average-time td:nth-child(1),  
 .page-admin-reports-report-cache-grievance-report-average-time .grievance-report-average-time th:nth-child(1) { 
-  width: 40%;
+  width: 20%;
 }
-
-.page-admin-reports-report-cache-grievance-report-average-time .grievance-report-average-time td:nth-child(2),  
-.page-admin-reports-report-cache-grievance-report-average-time .grievance-report-average-time th:nth-child(2) { 
-  width: 15%;
-}
-
-.page-admin-reports-report-cache-grievance-report-average-time .grievance-report-average-time td:nth-child(3),  
-.page-admin-reports-report-cache-grievance-report-average-time .grievance-report-average-time th:nth-child(3) { 
-  width: 15%;
-}
-
-.page-admin-reports-report-cache-grievance-report-average-time .grievance-report-average-time td:nth-child(4),  
-.page-admin-reports-report-cache-grievance-report-average-time .grievance-report-average-time th:nth-child(4) { 
-  width: 15%;
-}
-
-.page-admin-reports-report-cache-grievance-report-average-time .grievance-report-average-time td:nth-child(5),  
-.page-admin-reports-report-cache-grievance-report-average-time .grievance-report-average-time th:nth-child(5) { 
-  width: 15%;
-}
+*/
 
 .printonly { display: none; }
 @media print {
   .printonly { display: inherit; }
+}
+
+
+.page-grievance-report-average-time .status-list .form-item {
+  float: left;
+  padding-right: 10px;
 }
