--- a/sites/all/themes/at_tf_admin/css/at_admin.css
+++ b/sites/all/themes/at_tf_admin/css/at_admin.css
@@ -3855,3 +3855,14 @@ fieldset.date-combo .container-inline-date .date-padding {
 }
 
 
+.view-grievance-log-status .container-inline-date label,
+.view-grievance-log-status .views-widget-filter-created .views-widget label,
+.view-grievance-log-status .container-inline-date .description {
+  display: none;
+}
+
+
+.view-grievance-log-status .container-inline-date input,
+.view-grievance-log-status .views-widget-filter-created .views-widget input {
+  width: 150px;
+}
