--- a/sites/all/themes/at_sirius/css/page_frame.at_sirius.css
+++ b/sites/all/themes/at_sirius/css/page_frame.at_sirius.css
@@ -9,9 +9,6 @@ img.banner-logo {
 	font-family: roboto,arial, helvetica, san-serif;
 	font-weight: bold;
 	font-size:24px;
-	position: absolute;
-    top: 30px;
-    left: 100px;
     color: #ffffff;
     text-transform: uppercase;
     letter-spacing: 2px;
@@ -20,23 +17,19 @@ img.banner-logo {
 	color: #ffffcb;
 }
 #page-banner {
-    background: #1b4784;
-    background-image: url('/sites/default/files/adaptivetheme/at_sirius_files/blue-white-banner-bg.png');
-    background-repeat: repeat-x;
+	padding: 32px 0;
 }
 #page-banner .container {
     position: relative;
     /* border-bottom: solid 4px #5984be; */
-    background: #ffffff;
+    background: transparent;
 }
 #page-banner .user-links {
-	position: absolute;
-	right: 36px;
-	top: 20px;
 	z-index: 9;
-	background: transparent;
 	color: #fff;
 	font-size: 14px;
+	float: right;
+	text-align: right;
 }
 #page-banner .user-links a {
 	color: #fff;
@@ -76,3 +69,35 @@ div.messages div {
 div.region-help {
 	margin: 0 36px 28px 36px;
 }
+.banner {
+	font-size: 1.5em;
+	font-weight: bold;
+	font-style: italic;
+	color: #ffffff;
+}
+
+#block-block-2,
+.banner-wrapper {
+}
+
+.banner-wrapper .inner {
+  margin-left: 36px;
+  margin-right: 36px;
+}
+
+.banner-menu-outer-wrapper {
+    background-color: #ffffff;
+}
+
+/* client-specific settings */
+#page-banner {
+    background-color: #1b4784; /*teamsters*/
+    background-color: #000000; /*unitehere*/
+    border-bottom: 10px solid #fdb82f; /*teamsters*/
+    border-bottom: 10px solid #ff0000; /*unitehere*/
+}
+.banner-name-wrapper {
+    /*left: 100px; teamsters, with logo*/
+    /*left: 32px; unitehere, no logo*/
+}
+
